fix bug #40109 (iptcembed fails on non-jfif jpegs) + use safe_emalloc